# gba-sprite-engine

./: CMakeLists.txt  LICENSE  README.md  timespent.csv  timespent_jeffrey.csv  timespent_sebastiaan.csv
unfairGame/: CMakeLists.txt
unfairGame/background/Background/: Background.c  Background.h
unfairGame/background/Clouds/: Cloudbackground.h
unfairGame/background/Shared/: shared.h
unfairGame/background/StartScreen/: Startscreen.psd  startScreen.h
unfairGame/img/: Smiley.c  Smiley.h  mario-bg.c  mario-bg.h
unfairGame/scenes/: BossScene.cpp  BossScene.h  EndScene.cpp  EndScene.h  GenericScene.cpp  GenericScene.h  StartScene.cpp  StartScene.h  UnfairScene.cpp  UnfairScene.h
unfairGame/sprite/: Fireball.c  Fireball.h  Gerard.c  Gerard.h  Gerard_Dead.c  Gerard_Dead.h  Mad_Saaientist_Walking.c  Mad_Saaientist_Walking.h  TestTube.c  TestTube.h  Walking_Gerard_All.c  Walking_Gerard_All.h  Walking_Gerard_Right.c  Walking_Gerard_Right.h  background_data.h  run_grit_shared.py  run_grit_shared_J.py  shared.c  shared.h  sprite_data.h
unfairGame/sprite/Gerard/: Gerard.c  Gerard.h  Gerard_jump.piskel
unfairGame/sprite/StartScreen/: Startscreen.psd  backgroundFront.c  backgroundFront.h  startScreen.c  startScreen.h
unfairGame/sprite/Walkable/: walkable.c  walkable.h
unfairGame/sprite/outputs/: Fireball.c  Fireball.h  Gerard.c  Gerard.h  Gerard_Dead.c  Gerard_Dead.h  Walking_Gerard_Right.c  Walking_Gerard_Right.h  background_data.h  shared.c  shared.h  sprite_data.h
unfairGame/sprite/sprite_data/: background_data.h  combined_data.h  sprite_data.h
unfairGame/src/: Data.cpp  Data.h  Explosion1.h  Fireball.cpp  Fireball.h  Gerard.cpp  Gerard.h  Healthbar.cpp  Healthbar.h  Killable.cpp  Killable.h  Renderable.cpp  Renderable.h  Scientist.cpp  Scientist.h  Smiley.h  UnfairScene.cpp  UnfairScene.h  Walkable.cpp  Walkable.h  main.cpp  mario-bg.h  sprite_data.h  unfairScene.cpp  unfairScene.h
unfairGame/src/killable/: FireBall.cpp  FireBall.h  Killable.cpp  Killable.h  Mine.cpp  Mine.h  Plant.cpp  Plant.h  Testtube.cpp  (+1 more)
unfairGame/test/: CMakeLists.txt  datatest.cpp  gerardtest.cpp  scientisttest.cpp
(+23 files in other folders)
